--- a/DLR Explorer Notebook.ipynb
+++ b/DLR Explorer Notebook.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "from delprocess.surveys import loadTable, loadAnswers, searchQuestions, loadID, genS\n",
     "from delprocess.loadprofiles import loadReducedProfiles\n",
-    "from delprocess.plotprofiles import createMap\n",
+    "#from delprocess.plotprofiles import createMap\n",
     "from support import appProfiles \n",
     "\n",
     "mapbox_access_token = 'pk.eyJ1Ijoic2FpbnRseXZpIiwiYSI6ImNqZHZpNXkzcjFwejkyeHBkNnp3NTkzYnQifQ.Rj_C-fOaZXZTVhTlliofMA'"
@@ -72,14 +72,23 @@
     "\n",
     "# Load datasets\n",
     "ids = loadID()\n",
-    "a_ids = ids.drop_duplicates('AnswerID')\n",
     "p_ids = ids.loc[ids['Unit of measurement']==2].drop_duplicates('ProfileID')\n",
-    "print(ids.columns)\n",
-    "\n",
+    "a_ids = p_ids.drop_duplicates('AnswerID')\n",
+    "print(ids.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#a little bit of data wrangling\n",
-    "loc_summary = pd.pivot_table(ids, values = ['AnswerID'], index = ['Year','Survey','LocName','Lat','Long','Municipality','Province'],aggfunc = np.count_nonzero)\n",
+    "loc_summary = pd.pivot_table(p_ids, values = ['AnswerID','ProfileID'], \n",
+    "                             index = ['Year','Survey','LocName','Lat','Long','Municipality','Province'],\n",
+    "                             aggfunc = np.count_nonzero)\n",
     "loc_summary.reset_index(inplace=True)\n",
-    "loc_summary.rename(columns={'AnswerID':'# households'}, inplace=True)"
+    "loc_summary.head()"
    ]
   },
   {
@@ -100,6 +109,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "georef = p_ids.groupby(['Province','LocName','Lat','Long']).agg(\n",
+    "    {'Year':['nunique','min'],'ProfileID':'nunique','AnswerID':'nunique'})\n",
+    "georef.columns = georef.columns.droplevel()\n",
+    "georef.columns = ['metered','surveyed','nr_years','start_year']\n",
+    "georef.sort_values('start_year', inplace=True)\n",
+    "georef.reset_index(inplace=True)\n",
+    "georef.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,11 +136,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_map(ids_df):\n",
+    "def createStaticMap(ids_df, text_hover=False, zoom=False, zoom_province=False):\n",
     " \n",
-    "    georef = pd.pivot_table(ids_df, values = ['AnswerID'], index = ['Year','LocName','Lat','Long','Municipality','Province'],aggfunc = np.count_nonzero)\n",
+    "    georef = p_ids.groupby(['Province','LocName','Lat','Long']).agg(\n",
+    "        {'Year':['nunique','min'],'ProfileID':'nunique','AnswerID':'nunique'})\n",
+    "    georef.columns = georef.columns.droplevel()\n",
+    "    georef.columns = ['metered','surveyed','nr_years','start_year']\n",
+    "    georef.sort_values('start_year', inplace=True)\n",
     "    georef.reset_index(inplace=True)\n",
-    "    georef.rename(columns={'AnswerID':'# households'}, inplace=True)\n",
+    "    georef['marker_size'] = round(georef['nr_years']**0.6*6)\n",
+    "    \n",
+    "    if text_hover is False:\n",
+    "        georef['text']=georef['LocName']\n",
+    "        map_hoverinfo='none'\n",
+    "        map_mode='markers+text'\n",
+    "    else:\n",
+    "        georef['text']=georef['LocName']+'<br>' + 'Site launch: '+georef['start_year'].astype(str)+'<br>' +'Years monitored: '+ georef['nr_years'].astype(str)+'<br>' +'Metered households: '+ georef['metered'].astype(str)+'<br>' +'Surveyed households: '+ georef['surveyed'].astype(str)\n",
+    "        map_hoverinfo='text'\n",
+    "        map_mode='markers'\n",
+    "\n",
+    "    # Set marker colors to reflect start year of location monitoring\n",
+    "    colors = cl.scales['9']['seq']['YlOrBr'][::-1]+cl.scales['9']['seq']['YlGn'][1::]\n",
+    "    norm_color = np.linspace(0,1, len(georef.start_year.unique()))\n",
+    "    color_list = list(zip(norm_color, colors))\n",
+    "    \n",
+    "    if zoom_province in georef.Province.unique():\n",
+    "        zoom_level = zoom*(4.2)\n",
+    "        map_lat = georef.loc[georef['Province']==zoom_province,'Lat'].mean()\n",
+    "        map_lon = georef.loc[georef['Province']==zoom_province,'Long'].mean()\n",
+    "        map_title = 'NRS Load Research Programme Sites in the '+zoom_province+' Province'\n",
+    "    else:\n",
+    "        print('No valid zoom_level specified. Showing all sites.')\n",
+    "        zoom_level = 4.2\n",
+    "        map_lat = -29.1\n",
+    "        map_lon = 25\n",
+    "        map_title='NRS Load Research Programme Sites 1994-2014'\n",
+    "                           \n",
+    "    trace=go.Scattermapbox(\n",
+    "            name='Sites',\n",
+    "            lat=georef['Lat'],\n",
+    "            lon=georef['Long'],\n",
+    "            mode=map_mode,\n",
+    "            marker=dict(\n",
+    "                size=georef['marker_size'],\n",
+    "                color=georef['start_year'],\n",
+    "                colorscale=color_list,\n",
+    "                opacity=1,\n",
+    "                showscale=True,\n",
+    "                colorbar=dict(\n",
+    "                    lenmode='fraction', len=0.85,\n",
+    "                    thickness=20,\n",
+    "                    y=0, yanchor='bottom',\n",
+    "                    tickmode='linear', tick0=1994, dtick=2,\n",
+    "                    ticks='inside', ticklen=20,\n",
+    "                    title='Site launch year'\n",
+    "                )\n",
+    "            ),\n",
+    "            line=dict(color='black',width=3),\n",
+    "            text=georef['text'],\n",
+    "            textposition='bottom center',\n",
+    "            hoverinfo=map_hoverinfo,\n",
+    "            showlegend=False\n",
+    "        )\n",
+    "    \n",
+    "    trace_border=go.Scattermapbox(\n",
+    "            name='marker size<br>represents<br>years on site',\n",
+    "            lat=georef['Lat'],\n",
+    "            lon=georef['Long'],\n",
+    "            mode='markers',\n",
+    "            marker=dict(\n",
+    "                size=georef['marker_size']+1.6,\n",
+    "                color='black',\n",
+    "                opacity=1\n",
+    "            ),\n",
+    "            hoverinfo='none',\n",
+    "        )\n",
+    "\n",
+    "    figure=go.Figure(\n",
+    "        data=[trace_border, trace],\n",
+    "        layout = go.Layout(\n",
+    "                title=map_title,\n",
+    "                autosize=False,\n",
+    "                hovermode='closest',\n",
+    "                mapbox=dict(\n",
+    "                    accesstoken=mapbox_access_token,\n",
+    "                    bearing=0,\n",
+    "                    center=dict(\n",
+    "                        lat=map_lat,\n",
+    "                        lon=map_lon\n",
+    "                    ),\n",
+    "                    pitch=0,\n",
+    "                    zoom=zoom_level,\n",
+    "                    style='light'\n",
+    "                ),\n",
+    "                margin = dict(\n",
+    "                        l = 10,\n",
+    "                        r = 10,\n",
+    "                        t = 50,\n",
+    "                        b = 30\n",
+    "                ),\n",
+    "                showlegend=True\n",
+    "            )\n",
+    "    )\n",
+    "    return po.plot(figure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "createStaticMap(p_ids, text_hover=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "createStaticMap(p_ids, zoom=2.2, zoom_province='WC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createDynamicMap(ids_df, id_filter):\n",
+    " \n",
+    "    georef = pd.pivot_table(ids_df, values = [id_filter], \n",
+    "                            index = ['Year','LocName','Lat','Long','Municipality','Province'],aggfunc = np.count_nonzero)\n",
+    "    georef.reset_index(inplace=True)\n",
+    "    georef.rename(columns={id_filter:'# households'}, inplace=True)\n",
     "                           \n",
     "    traces = []\n",
     "    for y in range(georef.Year.min(), georef.Year.max()+1):\n",
@@ -161,7 +315,7 @@
     "                showlegend=True\n",
     "            )\n",
     "    )\n",
-    "    return po.iplot( figure)"
+    "    return po.plot( figure)"
    ]
   },
   {
@@ -170,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_map(ids)"
+    "create_map(p_ids)"
    ]
   },
   {
@@ -214,7 +368,7 @@
     "                       height=450, width=850)\n",
     "\n",
     "    fig = go.Figure(data=[nrslr, eskomlr], layout=layout)\n",
-    "    po.iplot(fig)"
+    "    po.plot(fig)"
    ]
   },
   {
@@ -328,9 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sd = genS('dist_base_appliance_behaviour',1994,2014)\n",
@@ -560,8 +712,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
