--- a/DLR Explorer Notebook.ipynb
+++ b/DLR Explorer Notebook.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "from delprocess.surveys import loadTable, loadAnswers, searchQuestions, loadID, genS\n",
     "from delprocess.loadprofiles import loadReducedProfiles\n",
-    "#from delprocess.plotprofiles import createMap\n",
+    "from delprocess.plotprofiles import createStaticMap, plotCustomerDist\n",
     "from support import appProfiles \n",
     "\n",
     "mapbox_access_token = 'pk.eyJ1Ijoic2FpbnRseXZpIiwiYSI6ImNqZHZpNXkzcjFwejkyeHBkNnp3NTkzYnQifQ.Rj_C-fOaZXZTVhTlliofMA'"
@@ -88,7 +88,8 @@
     "                             index = ['Year','Survey','LocName','Lat','Long','Municipality','Province'],\n",
     "                             aggfunc = np.count_nonzero)\n",
     "loc_summary.reset_index(inplace=True)\n",
-    "loc_summary.head()"
+    "loc_summary.head()\n",
+    "loc_summary.AnswerID.sum()"
    ]
   },
   {
@@ -109,21 +110,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "georef = p_ids.groupby(['Province','LocName','Lat','Long']).agg(\n",
-    "    {'Year':['nunique','min'],'ProfileID':'nunique','AnswerID':'nunique'})\n",
-    "georef.columns = georef.columns.droplevel()\n",
-    "georef.columns = ['metered','surveyed','nr_years','start_year']\n",
-    "georef.sort_values('start_year', inplace=True)\n",
-    "georef.reset_index(inplace=True)\n",
-    "georef.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,132 +117,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def createStaticMap(ids_df, text_hover=False, zoom=False, zoom_province=False):\n",
-    " \n",
-    "    georef = p_ids.groupby(['Province','LocName','Lat','Long']).agg(\n",
-    "        {'Year':['nunique','min'],'ProfileID':'nunique','AnswerID':'nunique'})\n",
-    "    georef.columns = georef.columns.droplevel()\n",
-    "    georef.columns = ['metered','surveyed','nr_years','start_year']\n",
-    "    georef.sort_values('start_year', inplace=True)\n",
-    "    georef.reset_index(inplace=True)\n",
-    "    georef['marker_size'] = round(georef['nr_years']**0.6*6)\n",
-    "    \n",
-    "    if text_hover is False:\n",
-    "        georef['text']=georef['LocName']\n",
-    "        map_hoverinfo='none'\n",
-    "        map_mode='markers+text'\n",
-    "    else:\n",
-    "        georef['text']=georef['LocName']+'<br>' + 'Site launch: '+georef['start_year'].astype(str)+'<br>' +'Years monitored: '+ georef['nr_years'].astype(str)+'<br>' +'Metered households: '+ georef['metered'].astype(str)+'<br>' +'Surveyed households: '+ georef['surveyed'].astype(str)\n",
-    "        map_hoverinfo='text'\n",
-    "        map_mode='markers'\n",
-    "\n",
-    "    # Set marker colors to reflect start year of location monitoring\n",
-    "    colors = cl.scales['9']['seq']['YlOrBr'][::-1]+cl.scales['9']['seq']['YlGn'][1::]\n",
-    "    norm_color = np.linspace(0,1, len(georef.start_year.unique()))\n",
-    "    color_list = list(zip(norm_color, colors))\n",
-    "    \n",
-    "    if zoom_province in georef.Province.unique():\n",
-    "        zoom_level = zoom*(4.2)\n",
-    "        map_lat = georef.loc[georef['Province']==zoom_province,'Lat'].mean()\n",
-    "        map_lon = georef.loc[georef['Province']==zoom_province,'Long'].mean()\n",
-    "        map_title = 'NRS Load Research Programme Sites in the '+zoom_province+' Province'\n",
-    "    else:\n",
-    "        print('No valid zoom_level specified. Showing all sites.')\n",
-    "        zoom_level = 4.2\n",
-    "        map_lat = -29.1\n",
-    "        map_lon = 25\n",
-    "        map_title='NRS Load Research Programme Sites 1994-2014'\n",
-    "                           \n",
-    "    trace=go.Scattermapbox(\n",
-    "            name='Sites',\n",
-    "            lat=georef['Lat'],\n",
-    "            lon=georef['Long'],\n",
-    "            mode=map_mode,\n",
-    "            marker=dict(\n",
-    "                size=georef['marker_size'],\n",
-    "                color=georef['start_year'],\n",
-    "                colorscale=color_list,\n",
-    "                opacity=1,\n",
-    "                showscale=True,\n",
-    "                colorbar=dict(\n",
-    "                    lenmode='fraction', len=0.85,\n",
-    "                    thickness=20,\n",
-    "                    y=0, yanchor='bottom',\n",
-    "                    tickmode='linear', tick0=1994, dtick=2,\n",
-    "                    ticks='inside', ticklen=20,\n",
-    "                    title='Site launch year'\n",
-    "                )\n",
-    "            ),\n",
-    "            line=dict(color='black',width=3),\n",
-    "            text=georef['text'],\n",
-    "            textposition='bottom center',\n",
-    "            hoverinfo=map_hoverinfo,\n",
-    "            showlegend=False\n",
-    "        )\n",
-    "    \n",
-    "    trace_border=go.Scattermapbox(\n",
-    "            name='marker size<br>represents<br>years on site',\n",
-    "            lat=georef['Lat'],\n",
-    "            lon=georef['Long'],\n",
-    "            mode='markers',\n",
-    "            marker=dict(\n",
-    "                size=georef['marker_size']+1.6,\n",
-    "                color='black',\n",
-    "                opacity=1\n",
-    "            ),\n",
-    "            hoverinfo='none',\n",
-    "        )\n",
-    "\n",
-    "    figure=go.Figure(\n",
-    "        data=[trace_border, trace],\n",
-    "        layout = go.Layout(\n",
-    "                title=map_title,\n",
-    "                autosize=False,\n",
-    "                hovermode='closest',\n",
-    "                mapbox=dict(\n",
-    "                    accesstoken=mapbox_access_token,\n",
-    "                    bearing=0,\n",
-    "                    center=dict(\n",
-    "                        lat=map_lat,\n",
-    "                        lon=map_lon\n",
-    "                    ),\n",
-    "                    pitch=0,\n",
-    "                    zoom=zoom_level,\n",
-    "                    style='light'\n",
-    "                ),\n",
-    "                margin = dict(\n",
-    "                        l = 10,\n",
-    "                        r = 10,\n",
-    "                        t = 50,\n",
-    "                        b = 30\n",
-    "                ),\n",
-    "                showlegend=True\n",
-    "            )\n",
-    "    )\n",
-    "    return po.plot(figure)"
+    "#### Create National Map"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "createStaticMap(p_ids, text_hover=True)"
+    "createStaticMap(p_ids, mapbox_access_token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Provincial Maps"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "createStaticMap(p_ids, zoom=2.2, zoom_province='WC')"
+    "createStaticMap(p_ids, mapbox_access_token, text_hover=False, zoom=1.8, zoom_province='GP', annotate=False)\n",
+    "#createStaticMap(p_ids, mapbox_access_token, text_hover=False, zoom=1.4, zoom_province='KZN', annotate=False)\n",
+    "#createStaticMap(p_ids, mapbox_access_token, text_hover=False, zoom=2.2, zoom_province='WC', annotate=False)\n",
+    "#createStaticMap(p_ids, mapbox_access_token, text_hover=False, zoom=1.4, zoom_province='NC', annotate=False)"
    ]
   },
   {
@@ -340,43 +236,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotCustomerDist(ids_df, id_filter, **kwargs):\n",
-    "    ids = ids_df.groupby(['Survey','Year'])[id_filter].nunique()\n",
-    "    \n",
-    "    if 'nrslr_col' in kwargs:\n",
-    "        nrslr_col = kwargs['nrslr_col']\n",
-    "    else: nrslr_col = 'red'\n",
-    "    if 'eskomlr_col' in kwargs:\n",
-    "        eskomlr_col = kwargs['eskomlr_col'] \n",
-    "    else: eskomlr_col = 'blue' \n",
-    "    \n",
-    "    nrslr = go.Bar(x = ids['NRS LR'].index, \n",
-    "                   y = ids['NRS LR'].values,\n",
-    "                   marker=dict(color=nrslr_col),\n",
-    "                   name = 'Municipalities')\n",
-    "\n",
-    "    eskomlr = go.Bar(x = ids['Eskom LR'].index, \n",
-    "                     y = ids['Eskom LR'].values,\n",
-    "                     marker = dict(color=eskomlr_col),\n",
-    "                     name = 'Eskom')\n",
-    "\n",
-    "    layout = go.Layout(title=kwargs['plot_title']+' from 1994 - 2014',\n",
-    "                       barmode = 'relative',\n",
-    "                       xaxis=dict(title='Year', tickvals=list(range(1994,2015))),\n",
-    "                       yaxis=dict(title=id_filter+' Count', showline=True),\n",
-    "                       margin=dict(t=70),\n",
-    "                       height=450, width=850)\n",
-    "\n",
-    "    fig = go.Figure(data=[nrslr, eskomlr], layout=layout)\n",
-    "    po.plot(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plotCustomerDist(p_ids, 'ProfileID', plot_title = 'Households Metered')"
    ]
   },
@@ -446,7 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids.loc[ids.Survey=='NRS LR'].groupby('Municipality')[['Location','AnswerID']].agg({'Location':'nunique','AnswerID':'nunique'})#.unstack().fillna('')"
+    "p_ids.loc[p_ids.Survey=='NRS LR'].groupby('Municipality')[['Location','ProfileID','AnswerID']].agg(\n",
+    "    {'Location':'nunique','ProfileID':'nunique','AnswerID':'nunique'})#.unstack().fillna('')"
    ]
   },
   {
